# Accelerator_C7_Hackthon_Multimodal_G1

./: .env.example  .gitignore  Makefile  README.md  app.py  multimodal_design_analysis_suite_5eefd8dc.plan.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CONCEPT_COVERAGE.md  COST_DISCIPLINE.md  DEMO_SCRIPT.md  DEPLOY_HF.md  FAQ.md  PERSON_A_infra.md  PERSON_B_rag.md  PERSON_C_visual_brand.md  PERSON_D_ux_accessibility.md  PERSON_E_market_ui_mcp.md  walkthrough.html
requirements/: all.txt  base.txt  dev.txt  optional-hf.txt  person-a-infra.txt  person-b-rag.txt  person-c-agents.txt  person-d-agents.txt  person-e-ui.txt
scripts/: __init__.py  ingest_references.py  render_diagrams.py  run_evals.py
src/: __init__.py  config.py  contracts.py
src/agents/: __init__.py  _color_math.py  accessibility.py  base.py  brand_consistency.py  graph.py  market_research.py  quality_gate.py  synthesizer.py  tools.py  ux_critique.py  visual_analysis.py
src/evals/: __init__.py  golden_set.py  harness.py
src/fakes/: __init__.py  fake_llm.py  fake_retriever.py  fake_search.py  fixtures.py
src/llm/: __init__.py  cost.py  cost_tracker.py  hf_local.py  multimodal.py  openrouter_client.py
src/mcp/: __init__.py  server.py
src/rag/: __init__.py  editorial_refs.py  embedder.py  retriever.py  vector_store.py
src/schemas/: __init__.py  outputs.py  state.py
src/tools/: __init__.py  image_utils.py  rag_tool.py  web_search.py
src/utils/: __init__.py  logger.py  prompts.py  safe_image.py  tracing.py
tests/: conftest.py  test_contracts.py  test_editorial_refs.py  test_fakes.py  test_prompts.py  test_quality_gate.py  test_safe_image.py  test_schemas.py  test_tools.py
tests/person_a/: test_cost.py  test_graph.py  test_openrouter.py  test_openrouter_reasoning.py  test_synthesizer.py
tests/person_b/: test_embedder.py  test_image_utils.py  test_ingest_references.py  test_rag_tool.py  test_retriever.py  test_vector_store.py
tests/person_c/: test_brand_consistency.py  test_palette_validator.py  test_visual_analysis.py
ui/: app.py  handlers.py  references.py  render.py  state.py  strings.py  styles.py
(+15 files in other folders)
